--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-/**********************/
-/*     ANIMATIONS     */
-/**********************/
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -42,32 +39,14 @@ html {
   font-size: 62.5%; }
 
 body {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  line-height: 1.6;
-  color: #777;
   padding: 3rem;
   box-sizing: border-box; }
 
-.header {
-  height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.75), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
-  background-size: cover;
-  background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  position: relative; }
-  .header__logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem; }
-  .header__logo {
-    height: 3.5rem; }
-  .header__text-box {
-    position: absolute;
-    text-align: center;
-    top: 42%;
-    left: 50%;
-    transform: translate(-50%, -50%); }
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
+  color: #777; }
 
 .heading-primary {
   color: #fff;
@@ -104,6 +83,9 @@ body {
 .btn:hover {
   transform: translateY(-3px);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.25); }
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0; }
 
 .btn:active {
   transform: translateY(-1px);
@@ -123,14 +105,29 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: -1; }
-  .btn::after::after {
-    background-color: #fff; }
-
-.btn:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0; }
+  z-index: -1;
+  background-color: rgba(255, 255, 255, 0.7); }
 
 .btn--animated {
   animation: moveInUp 1s ease-out 750ms;
   animation-fill-mode: backwards; }
+
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.75), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 92%);
+  position: relative; }
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+  .header__text-box {
+    position: absolute;
+    text-align: center;
+    top: 42%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
