--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,168 +1,14 @@
-// LINE HEIGHTS:
-// 1.6
+@import "abstracts/functions"
+@import "abstracts/mixins"
+@import "abstracts/variables"
 
-// GREYS:
-$color-grey: #777
-$color-white: #fff
+@import "base/animations"
+@import "base/base"
+@import "base/typography"
+@import "base/utilities"
 
-// MAIN PALETTE
-$color-primary: #55c57a
-$color-primary--light: #7ed56f
-$color-primary--shade: #28b485
+@import "components/button"
 
-/**********************/
-/*     ANIMATIONS     */
-/**********************/
-@keyframes moveInLeft
-    0%
-        opacity: 0
-        transform: translateX(-12rem)
+@import "layout/header"
 
-    80%
-        opacity: 0.8
-        transform: translateX(0.8rem)
-
-    100%
-        opacity: 1
-        transform: translateX(0)
-
-@keyframes moveInRight
-    0%
-        opacity: 0
-        transform: translateX(12rem)
-
-    80%
-        opacity: 0.8
-        transform: translateX(-0.8rem)
-
-    100%
-        opacity: 1
-        transform: translateX(0)
-
-@keyframes moveInUp
-    0%
-        opacity: 0
-        transform: translateY(8rem)
-
-    100%
-        opacity: 1
-        transform: translateY(0)
-
-*,
-*::before,
-*::after
-    margin: 0
-    padding: 0
-    box-sizing: inherit
-
-html
-    font-size: 62.5%
-
-body
-    font-family: "Lato", sans-serif
-    font-weight: 400
-    line-height: 1.6
-    color: $color-grey
-    padding: 3rem
-
-    box-sizing: border-box
-
-.header
-    height: 95vh
-    background-image: linear-gradient(to right bottom, rgba($color-primary--light, 0.75), rgba($color-primary--shade, 0.8)), url(../img/hero.jpg)
-    background-size: cover
-    background-position: top
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%)
-
-    position: relative
-
-    &__logo-box
-        position: absolute
-        top: 4rem
-        left: 4rem
-
-    &__logo
-        height: 3.5rem
-
-    &__text-box
-        position: absolute
-        text-align: center
-        top: 42%
-        left: 50%
-        transform: translate(-50%, -50%)
-
-.heading-primary
-    color: $color-white
-    text-transform: uppercase
-    margin-bottom: 6rem
-
-    // a hack to fix shaky animation on some browsers
-    -webkit-backface-visibility: hidden
-    backface-visibility: hidden
-
-    &--main
-        display: block
-        font-size: 6rem
-        font-weight: 400
-        letter-spacing: 3.5rem
-        margin-left: 1.4rem
-
-        animation: moveInLeft 1.2s ease-out
-        // animation-delay: 3s
-        // animation-iteration-count: 3
-
-    &--sub
-        display: block
-        font-size: 2rem
-        font-weight: 700
-        letter-spacing: 1.7rem
-        word-spacing: 0.1rem
-        animation: moveInRight 1.2s ease-out
-
-.btn:link, .btn:visited
-    font-size: 1.6rem
-    font-weight: 500
-    text-transform: uppercase
-    text-decoration: none
-
-    padding: 1.5rem 3.6rem
-    display: inline-block
-    border-radius: 10rem
-    transition: all 300ms
-    position: relative
-
-.btn:hover
-    transform: translateY(-3px)
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.25)
-
-.btn:active
-    transform: translateY(-1px)
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2)
-
-.btn--white
-    color: $color-grey
-    background-color: $color-white
-
-.btn::after
-    content: ""
-    display: inline-block
-    height: 100%
-    width: 100%
-    border-radius: 10rem
-    transition: all 400ms
-
-    position: absolute
-    top: 0
-    left: 0
-    z-index: -1
-
-    &::after
-        background-color: $color-white
-
-.btn:hover::after
-    transform: scaleX(1.4) scaleY(1.6)
-    opacity: 0
-
-.btn--animated
-    animation: moveInUp 1s ease-out 750ms
-    animation-fill-mode: backwards
+@import "pages/home"
