Completed the webpage's layouts and components; moving on to navigation and pop-up

--- a/sass/abstracts/_variables.sass
+++ b/sass/abstracts/_variables.sass
@@ -1,12 +1,33 @@
 // LINE HEIGHTS:
 $line-height--main: 1.6
 
-// GREYS:
+// COLORS--GREYS:
 $color-grey: #777
+$color-grey--light-1: #f7f7f7
+$color-grey--light-2: #eee
+$color-grey--dark-1: #999
+$color-grey--dark-2: #333
+//       &--abs
 $color-white: #fff
 $color-black: #000
 
-// MAIN PALETTE
+// COLORS--MAIN
 $color-primary: #55c57a
 $color-primary--light: #7ed56f
 $color-primary--shade: #28b485
+
+//      &--SECONDARY
+$color-secondary--light: #ffb900
+$color-secondary--shade: #ff7730
+
+//      &--TERTIARY
+$color-tertiary--light: #2998ff
+$color-tertiary--shade: #5643fa
+
+// FONT SIZES
+$default-size: 1.6rem
+
+// GRID LAYOUT
+$grid-width: 114rem
+$gutter-ver: 6rem
+$gutter-hor: 4rem
