--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -11,3 +11,13 @@ html
 body
     padding: 3rem
     box-sizing: border-box
+
+::-webkit-scrollbar
+    width: 8px
+
+    &-track
+        background-color: $color-white
+
+    &-thumb
+        border-radius: 2px
+        background-color: $color-primary--shade
