--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,14 @@ body {
   padding: 3rem;
   box-sizing: border-box; }
 
+::-webkit-scrollbar {
+  width: 8px; }
+  ::-webkit-scrollbar-track {
+    background-color: #fff; }
+  ::-webkit-scrollbar-thumb {
+    border-radius: 2px;
+    background-color: #28b485; }
+
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
@@ -59,7 +67,7 @@ body {
     font-size: 6rem;
     font-weight: 400;
     letter-spacing: 3.5rem;
-    margin-left: 1.4rem;
+    margin-left: 1.6rem;
     animation: moveInLeft 1.2s ease-out; }
   .heading-primary--sub {
     display: block;
@@ -69,7 +77,56 @@ body {
     word-spacing: 0.1rem;
     animation: moveInRight 1.2s ease-out; }
 
-.btn:link, .btn:visited {
+.heading-secondary {
+  font-size: 3rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to bottom right, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: 2px;
+  transition: all 350ms; }
+  .heading-secondary:hover {
+    transform: skewY(0.7deg) scale(1.03);
+    text-shadow: 0.5rem 0.8rem 2rem rgba(0, 0, 0, 0.18); }
+
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: .3px; }
+
+.paragraph {
+  font-size: 1.6rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
+
+.u-center-text {
+  text-align: center !important; }
+
+.u-mrgn-btm--big {
+  margin-bottom: 8rem !important; }
+
+.u-mrgn-btm--medium {
+  margin-bottom: 4rem !important; }
+
+.u-mrgn-btm--small {
+  margin-bottom: 1.5rem !important; }
+
+.u-mrgn-top--huge {
+  margin-top: 10rem !important; }
+
+.u-mrgn-top--big {
+  margin-top: 8rem !important; }
+
+.u-mrgn-top--medium {
+  margin-top: 4rem !important; }
+
+.u-mrgn-top--small {
+  margin-top: 1.5rem !important; }
+
+.btn, .btn:link, .btn:visited {
   font-size: 1.6rem;
   font-weight: 500;
   text-transform: uppercase;
@@ -78,7 +135,10 @@ body {
   display: inline-block;
   border-radius: 10rem;
   transition: all 300ms;
-  position: relative; }
+  position: relative;
+  font-family: inherit;
+  border: none;
+  cursor: pointer; }
 
 .btn:hover {
   transform: translateY(-3px);
@@ -87,13 +147,22 @@ body {
     transform: scaleX(1.4) scaleY(1.6);
     opacity: 0; }
 
-.btn:active {
+.btn:active, .btn:focus {
+  outline: none;
   transform: translateY(-1px);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
 .btn--white {
   color: #777;
   background-color: #fff; }
+  .btn--white::after {
+    background-color: rgba(255, 255, 255, 0.7); }
+
+.btn--green {
+  color: #fff;
+  background-color: #55c57a; }
+  .btn--green::after {
+    background-color: rgba(85, 197, 122, 0.7); }
 
 .btn::after {
   content: "";
@@ -105,19 +174,331 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: -1;
-  background-color: rgba(255, 255, 255, 0.7); }
+  z-index: -1; }
 
 .btn--animated {
   animation: moveInUp 1s ease-out 750ms;
   animation-fill-mode: backwards; }
 
+.btn-text:link, .btn-text:visited {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #28b485;
+  border-bottom: 1px solid #55c57a;
+  padding: 3px;
+  transition: all 250ms; }
+
+.btn-text:hover {
+  background-color: #55c57a;
+  color: #fff;
+  border-top: 1px solid #55c57a;
+  transform: translateY(-2px);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.btn-text:active {
+  transform: translateY(0px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.composition {
+  position: relative; }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.4);
+    position: absolute;
+    transition: all 200ms;
+    outline-offset: 2rem; }
+    .composition__photo:hover {
+      outline: 1.5rem solid #55c57a;
+      z-index: 999;
+      transform: scale(1.05) translateY(-0.5rem);
+      box-shadow: 0 2.5rem 3rem rgba(0, 0, 0, 0.5); }
+    .composition__photo--p1 {
+      left: 0;
+      top: -2rem; }
+    .composition__photo--p2 {
+      right: 0;
+      top: 2rem; }
+    .composition__photo--p3 {
+      left: 20%;
+      top: 10rem; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.95); }
+
+.feature-box {
+  height: 30rem;
+  padding: 2.5rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.6);
+  transition: transform 300ms; }
+  .feature-box__icon {
+    font-size: 6rem;
+    margin-bottom: .5rem; }
+    .feature-box__icon::before {
+      background-image: linear-gradient(to right, #7ed56f, #28b485);
+      -webkit-background-clip: text;
+      color: transparent; }
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.02);
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.65); }
+
+.card {
+  -moz-perspective: 150rem;
+  perspective: 150rem;
+  position: relative;
+  height: 51rem; }
+  .card__side {
+    height: 51rem;
+    width: 100%;
+    transition: all 850ms ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border-radius: 5px;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+    overflow: hidden; }
+    .card__side--front {
+      background-color: #fff; }
+    .card__side--back {
+      transform: rotateY(180deg); }
+      .card__side--back-1 {
+        background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
+      .card__side--back-2 {
+        background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+      .card__side--back-3 {
+        background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
+  .card:hover .card__side--front {
+    transform: rotateY(-180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0); }
+  .card__img {
+    height: 22rem;
+    background-size: cover;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+    .card__img--1 {
+      background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/nat-5.jpg); }
+    .card__img--2 {
+      background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url(../img/nat-6.jpg); }
+    .card__img--3 {
+      background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../img/nat-7.jpg); }
+  .card__heading {
+    width: 75%;
+    font-size: 3.2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    line-height: 1.8;
+    color: #fff;
+    position: absolute;
+    top: 12rem;
+    right: 2rem; }
+  .card__heading-span {
+    padding: 1rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    .card__heading-span--1 {
+      background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.85), rgba(255, 119, 48, 0.85)); }
+    .card__heading-span--2 {
+      background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.85), rgba(40, 180, 133, 0.85)); }
+    .card__heading-span--3 {
+      background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)), url(../img/nat-7.jpg); }
+  .card__desc {
+    padding: 3rem; }
+    .card__desc ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto; }
+      .card__desc ul li {
+        text-align: center;
+        font-size: 1.6rem;
+        padding: 1rem; }
+        .card__desc ul li:not(:last-child) {
+          border-bottom: 1px solid #eee; }
+  .card .card__cta {
+    width: 75%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
+  .card .card__price-box {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    color: #fff;
+    margin-bottom: 8rem; }
+  .card .card__price-value {
+    font-size: 6rem;
+    font-weight: 100; }
+
+.story {
+  width: 75%;
+  margin: 0 auto;
+  padding: 6rem;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.12);
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 3px;
+  font-size: 1.6rem;
+  transform: skewX(-12deg); }
+  .story > * {
+    transform: skewX(12deg); }
+  .story:not(:last-child) {
+    margin-bottom: 6rem; }
+  .story__shape {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    margin-right: 6rem;
+    position: relative;
+    -webkit-shape-outside: circle(40% at 50% 50%);
+    shape-outside: circle(40% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    overflow: hidden; }
+    .story__shape::after {
+      content: "";
+      width: 15rem;
+      height: 15rem;
+      position: absolute;
+      background-size: cover;
+      transform: scale(1.3);
+      background-position: top;
+      transition: all 350ms;
+      top: 0;
+      left: 0;
+      z-index: 998; }
+    .story__shape--1:after {
+      background-image: url(../img/nat-8.jpg); }
+    .story__shape--2:after {
+      background-image: url(../img/nat-9.jpg); }
+  .story__caption {
+    width: 65%;
+    font-size: 1.8rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fff;
+    opacity: 0;
+    transition: all 500ms;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, 0);
+    z-index: 999; }
+  .story:hover .story__shape:after {
+    transform: scale(1);
+    filter: blur(3px) brightness(80%); }
+  .story:hover .story__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%); }
+
+.bg-vid {
+  height: 100%;
+  width: 100%;
+  z-index: -999;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.15; }
+  .bg-vid__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: left; }
+
+.form__group:not(:last-child) {
+  margin-bottom: 2rem; }
+
+.form__input {
+  width: 90%;
+  display: block;
+  border: none;
+  border-radius: 2px;
+  padding: 1.5rem 2rem;
+  padding-top: 2rem;
+  border-bottom: 3px solid transparent;
+  font-family: inherit;
+  font-size: 1.6rem;
+  color: inherit;
+  background-color: rgba(255, 255, 255, 0.5);
+  transition: all 450ms; }
+  .form__input:valid {
+    border-bottom: 3px solid #55c57a; }
+  .form__input:focus {
+    outline: none;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.25);
+    border-bottom: 3px solid #55c57a; }
+  .form__input:focus:invalid {
+    border-bottom: 3px solid #ff7730; }
+  .form__input::-webkit-input-placeholder {
+    color: #999; }
+
+.form__label {
+  display: block;
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin: .7rem 0 0 2rem;
+  transition: all 300ms; }
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-3rem); }
+
+.form__radio-group {
+  width: 49%;
+  display: inline-block; }
+
+.form__radio-input {
+  display: none; }
+
+.form__radio-label {
+  position: relative;
+  font-size: 1.6rem;
+  cursor: pointer;
+  padding-left: 4rem; }
+
+.form__radio-button {
+  width: 3rem;
+  height: 3rem;
+  border: 5px solid #55c57a;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: -.6rem; }
+  .form__radio-button::after {
+    content: "";
+    display: block;
+    height: 1.4rem;
+    width: 1.4rem;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #55c57a;
+    opacity: 0;
+    transition: opacity 250ms; }
+
+.form__radio-input:checked ~ .form__radio-label > .form__radio-button::after {
+  opacity: 1; }
+
 .header {
-  height: 95vh;
+  height: 90vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.75), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 92%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 97%);
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 97%);
   position: relative; }
   .header__logo-box {
     position: absolute;
@@ -131,3 +512,130 @@ body {
     top: 42%;
     left: 50%;
     transform: translate(-50%, -50%); }
+
+.row {
+  max-width: 114rem;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 6rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^="col"] {
+    float: left;
+    padding: 1.2rem; }
+    .row [class^="col"]:not(:last-child) {
+      margin-right: 4rem; }
+  .row .col-1-of-2 {
+    width: calc( (100% - 4rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc( (100% - 4rem * 2) / 3); }
+  .row .col-2-of-3 {
+    width: calc( ((100% - 4rem * 2) / 3) * 2 + 4rem); }
+  .row .col-1-of-4 {
+    width: calc( (100% - 4rem * 3) / 4); }
+  .row .col-2-of-4 {
+    width: calc( ((100% - 4rem * 3) / 4) * 2 + 4rem); }
+  .row .col-3-of-4 {
+    width: calc( ((100% - 4rem * 3) / 4) * 3 + (4rem * 2)); }
+
+.footer {
+  color: #f7f7f7;
+  background-color: #333;
+  padding: 8rem 0;
+  font-size: 1.4rem; }
+  .footer__logo-box {
+    text-align: center; }
+  .footer__logo {
+    width: 15rem;
+    height: auto; }
+  .footer__navigation {
+    display: inline-block;
+    border-top: 1px solid #777;
+    padding-top: 2rem; }
+  .footer__list {
+    text-align: center;
+    list-style: none; }
+  .footer__item {
+    display: inline-block; }
+    .footer__item:not(:last-child) {
+      margin-right: 1.5rem; }
+  .footer__link {
+    padding: 1.5rem 0;
+    transition: all 200ms; }
+    .footer__link--copy {
+      transition: all 250ms; }
+      .footer__link--copy:link, .footer__link--copy:visited {
+        text-decoration: none;
+        color: inherit; }
+      .footer__link--copy:hover {
+        color: #55c57a;
+        text-shadow: 0 0.8rem 2rem rgba(126, 213, 111, 0.4); }
+    .footer__link:link, .footer__link:visited {
+      display: inline-block;
+      text-decoration: none;
+      text-transform: uppercase;
+      letter-spacing: .1rem;
+      color: inherit; }
+    .footer__link:hover, .footer__link:active {
+      color: #55c57a;
+      text-shadow: 0 0.8rem 2rem rgba(126, 213, 111, 0.4);
+      transform: translateY(-1.5rem) scale(1.2); }
+  .footer__copyright {
+    margin-left: 3.5rem;
+    line-height: 1.8;
+    display: inline-block;
+    border-top: 1px solid #777;
+    padding-top: 3.5rem; }
+  .footer__made {
+    text-align: center;
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    font-weight: 600;
+    background-image: linear-gradient(to right, #7ed56f, #28b485);
+    -webkit-background-clip: text;
+    color: transparent; }
+    .footer__made span {
+      color: initial; }
+
+.section-about {
+  padding: 20rem 0;
+  margin-top: -20vh;
+  background-image: linear-gradient(to right, #fff, #f7f7f7); }
+
+.section-features {
+  padding: 20rem 0;
+  margin: -15vh 0 4rem 0;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.75), rgba(40, 180, 133, 0.8)), url(../img/nat-4.jpg);
+  background-size: cover;
+  background-position: top;
+  transform: skewY(-4deg); }
+  .section-features > * {
+    transform: skewY(4deg); }
+
+.section-tours {
+  padding: 15rem 0 6rem 0;
+  margin-top: -10vh;
+  background-image: linear-gradient(to left, #fff, #f7f7f7); }
+
+.section-stories {
+  padding: 10rem 0;
+  position: relative; }
+
+.section-booking {
+  padding: 11rem;
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+
+.book {
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 50%, transparent 50%), url(../img/nat-10.jpg);
+  background-size: cover;
+  background-position: top;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.5); }
+  .book__form {
+    width: 50%;
+    padding: 6rem; }
