--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -18,7 +18,7 @@ body
         font-size: 6rem
         font-weight: 400
         letter-spacing: 3.5rem
-        margin-left: 1.4rem
+        margin-left: $default-size
 
         animation: moveInLeft 1.2s ease-out
         // animation-delay: 3s
@@ -31,3 +31,31 @@ body
         letter-spacing: 1.7rem
         word-spacing: 0.1rem
         animation: moveInRight 1.2s ease-out
+
+.heading-secondary
+    font-size: 3rem
+    text-transform: uppercase
+    font-weight: 700
+    display: inline-block
+    background-image: linear-gradient(to bottom right, $color-primary--light, $color-primary--shade)
+    -webkit-background-clip: text
+    color: transparent
+    letter-spacing: 2px
+
+    transition: all 350ms
+
+    &:hover
+        transform: skewY(0.7deg) scale(1.03)
+        text-shadow: .5rem .8rem 2rem rgba($color-black, 0.18)
+
+.heading-tertiary
+    font-size: $default-size
+    font-weight: 700
+    text-transform: uppercase
+    letter-spacing: .3px
+
+.paragraph
+    font-size: $default-size
+
+    &:not(:last-child)
+        margin-bottom: 3rem
