--- a/sass/layout/_header.sass
+++ b/sass/layout/_header.sass
@@ -1,9 +1,10 @@
 .header
-    height: 95vh
+    height: 90vh
     background-image: linear-gradient(to right bottom, rgba($color-primary--light, 0.75), rgba($color-primary--shade, 0.8)), url(../img/hero.jpg)
     background-size: cover
     background-position: top
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 92%)
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 97%)
+    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 97%)
 
     position: relative
 
