--- a/sass/components/_button.sass
+++ b/sass/components/_button.sass
@@ -68,12 +68,12 @@
         color: $color-primary--shade
         border-bottom: 1px solid $color-primary
         padding: 3px
-        transition: all 250ms
+        transition: all 300ms
 
     &:hover
         background-color: $color-primary
         color: $color-white
-        border-top: 1px solid $color-primary
+        // border-top: 1px solid $color-primary
 
         transform: translateY(-2px)
         box-shadow: 0 1rem 2rem rgba($color-black, 0.2)
