--- a/sass/layout/_footer.sass
+++ b/sass/layout/_footer.sass
@@ -59,15 +59,16 @@
         display: inline-block
         border-top: 1px solid $color-grey
         padding-top: 3.5rem
+        cursor: default
 
     &__made
         text-align: center
         font-size: $default-size
-        text-transform: uppercase
         font-weight: 600
         background-image: linear-gradient(to right, $color-primary--light, $color-primary--shade)
         -webkit-background-clip: text
         color: transparent
+        cursor: default
 
         & span
             color: initial
